--- a/skyfolk/static/css/style.css
+++ b/skyfolk/static/css/style.css
@@ -352,6 +352,8 @@ position: 200px;
 */
 #linkLogin{
     margin-left: 6px;
+	
+	}
 .myButton {
 	-moz-box-shadow: 0px 1px 0px 0px #f0f7fa;
 	-webkit-box-shadow: 0px 1px 0px 0px #f0f7fa;
