--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -1,138 +1,516 @@
-@import url(http://fonts.googleapis.com/css?family=Duru+Sans);
+@import url(http://weloveiconfonts.com/api/?family=entypo);
+/* entypo */
+[class*="entypo-"]:before {
+  font-family: 'entypo', sans-serif;
+}
+
+@import url(http://fonts.googleapis.com/css?family=Flamenco);
+
+* {
+  -webkit-font-smoothing: antialiased;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  font-weight: 300;
+  line-height: 24px;
+  letter-spacing: .02em;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 
 body {
-
-background: #000;
+  background: #333333 url(https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQ9N2Nws6EKk-ow6IQAiXf4ycMXtpej9rL2HPqEu0LssFGge0Rt) no-repeat center center;
+  background-size: cover;
 }
 
-ul {
-    height: 490px;
-    margin: 220px auto;
-    perspective: 400px;
-    -webkit-perspective: 500px;
-    -moz-perspective: 500px;
-    -ms-perspective: 500px;
-    -o-perspective: 500px;
-    width: 815px;
-	
+.profile_card {
+  height: 460px;
+  width: 260px;
+  float:left;
+  margin: 10vh auto;
+  border-radius: 1px;
+  box-shadow: 0 0 0 0.22em rgba(255, 255, 255, 0.35);
 }
-ul li {
-    background-color: #222;
-    display: inline-block;
-    margin-right: -15px;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    height: 165px;
-    list-style: none;
-    text-align: center;
-    transform: rotateY(45deg);
-    -webkit-transform: rotateY(45deg);
-    -moz-transform: rotateY(45deg);
-    -o-transform: rotateY(45deg);
-    transition: all ease .5s;
-    -webkit-transition: all ease .5s;
-    -moz-transition: all ease .5s;
-    -o-transition: all ease .5s;
-    padding: 15px;
-    position: relative;
-    width: 165px;
-    z-index: 50;
-	border-radius: 400px;
--moz-border-radius: 400px;  
--webkit-border-radius: 400px;  
-} 
+.profile_card .header, .profile_card .perfil {
+  height: 235px;
+  width: 100%;
+  float: left;
 }
-li p {
-    color:#ddd;
-    font-size: .9em;
-    margin: 4px 0 13px;
+.profile_card .header {
+  background: url(http://www.boschce.es/wp-content/uploads/2013/05/nueva-york1.jpg) no-repeat center center;
+  background-size: 126% 100%;
+  -webkit-transition: background-size 0.3s ease;
+  -moz-transition: background-size 0.3s ease;
+  transition: background-size 0.3s ease;
 }
-ul li a.boton {
-    background-color: #222222;
-    border-radius: 2px 2px 2px 2px;
-    bottom: 5px;
-    color: #FFFFFF;
-    font-size: 1em;
-    padding: 0.5em;
-    right: 5px;
-    text-align: center;
-    text-decoration: none;
-    transition: background-color 1s ease 0s;
-    -webkit-transition: background-color 1s ease 0s;
-    -moz-transition: background-color 1s ease 0s;
-    -o-transition: background-color 1s ease 0s;
+.profile_card .header:before {
+  content: '';
+  display: block;
+  width: 100px;
+  height: 28px;
+  background: #f9f9f9;
+  position: relative;
+  z-index: 1;
+  margin: 15em auto 0;
 }
-ul li a.boton:hover {
-   color: #222222;
+.profile_card .header .inner_head a {
+  font-size: 1.4em;
+  padding: 1.5em 0.5em 0 1em;
+  display: inline-block;
+  color: transparent;
+  text-decoration: none;
+  width: 23%;
+  text-align: center;
 }
-ul li img {
-    height: 80px !important;
-    width: 80px !important;
-		border-radius: 400px;
--moz-border-radius: 400px;  
--webkit-border-radius: 400px;  
-}
-ul li:nth-child(3) {
-    background-color: #222222;
-    transform: rotateY(0deg) scale(1.22);
-    -webkit-transform: rotateY(0deg) scale(1.22);
-    -moz-transform: rotateY(0deg) scale(1.22);
-    -o-transform: rotateY(0deg) scale(1.22);
-    z-index: 55;
-}
- ul li:nth-child(3) a.boton {
-    background-color: #0099CC;
-}
- ul li:nth-child(3) ~ li {
-    transform: rotateY(-45deg);
-    -webkit-transform: rotateY(-45deg);
-    -ms-transform: rotateY(-45deg);
-    -o-transform: rotateY(-45deg);
-    -moz-transform: rotateY(-45deg);
-}
- ul li:last-child,  ul li:first-child {
-    z-index: 45;
-}
- ul:hover li:not(:hover) {
-    background-color: #111111;
-    transform: rotateY(45deg);
-    -webkit-transform: rotateY(45deg);
-    -o-transform: rotateY(45deg);
-    -moz-transform: rotateY(45deg);
-    -ms-transform: rotateY(45deg);
-}
- ul:hover li a.boton {
-    background-color: #222222;
-}
- ul li:hover,  ul li:first-child:hover,  ul li:nth-child(3) ~ li:hover {
-     background-color: #222;
-     transform: rotateY(0) scale(1.22);
-     -webkit-transform: rotateY(0) scale(1.22);
-     -moz-transform: rotateY(0) scale(1.22);
-     -ms-transform: rotateY(0) scale(1.22);
-     -o-transform: rotateY(0) scale(1.22);
-     z-index: 60;
-}
- ul:hover li:hover a.boton {
-    background-color: #0099CC;
-}
- ul:hover li:hover ~ li {
-    transform: rotateY(-45deg);
-    -webkit-transform: rotateY(-45deg);
-    -ms-transform: rotateY(-45deg);
-    -o-transform: rotateY(-45deg);
-    -moz-transform: rotateY(-45deg);
+.profile_card .header .inner_head a i {
+  position: absolute;
+  margin-top: 2em;
+  text-align: center;
+  display: block;
+  display: none;
+  font-style: normal;
+  left: 0;
+  right: 0;
+  margin: 2.8em auto;
+  font-family: 'Flamenco', cursive;
+  color: #fff;
 }
 
-p {
-color: #FFFFFF;
-font-family: 'Duru Sans', sans-serif;
-text-shadow: 2px 2px #000;
+.profile_card .header .inner_head {
+  position: relative;
+  margin-top: -16.8em;
+  width: 260px;
+  height: 230px;
+  -webkit-transition: background 0.3s ease;
+  -moz-transition: background 0.3s ease;
+  transition: background 0.3s ease;
 }
 
+.profile_card .header .inner_head a span {
+  margin-left: -.5em;
+  margin-top: -1em;
+  display: block;
+}
+.profile_card .header .inner_head a:hover i {
+  display: block;
+}
+.profile_card .header:hover {
+  -webkit-transition: background 0.3s ease;
+  -moz-transition: background 0.3s ease;
+  transition: background 0.3s ease;
+  background-size: 252% 200%;
+}
+.profile_card .header:hover a {
+  color: #fff;
+}
+.profile_card .header:hover a:nth-child(1) {
+  -webkit-transition: color 0.15s ease;
+  -moz-transition: color 0.15s ease;
+  transition: color 0.15s ease;
+}
+.profile_card .header:hover a:nth-child(1):hover {
+  color: #00FF6B;
+  -webkit-transition: color 0.15s ease;
+  -moz-transition: color 0.15s ease;
+  transition: color 0.15s ease;
+}
+.profile_card .header:hover a:nth-child(2) {
+  -webkit-transition: color 0.15s ease 0.15s;
+  -moz-transition: color 0.15s ease 0.15s;
+  transition: color 0.15s ease 0.15s;
+}
+.profile_card .header:hover a:nth-child(2):hover {
+  color: #B5F1FF;
+  -webkit-transition: color 0.15s ease;
+  -moz-transition: color 0.15s ease;
+  transition: color 0.15s ease;
+}
+.profile_card .header:hover a:nth-child(3) {
+  -webkit-transition: color 0.15s ease 0.2s;
+  -moz-transition: color 0.15s ease 0.2s;
+  transition: color 0.15s ease 0.2s;
+}
+.profile_card .header:hover a:nth-child(3):hover {
+  color: #FFCD00;
+  -webkit-transition: color 0.15s ease;
+  -moz-transition: color 0.15s ease;
+  transition: color 0.15s ease;
+}
+.profile_card .header:hover a:nth-child(4) {
+  -webkit-transition: color 0.15s ease 0.3s;
+  -moz-transition: color 0.15s ease 0.3s;
+  transition: color 0.15s ease 0.3s;
+}
+.profile_card .header:hover a:nth-child(4):hover {
+  color: #FF0022;
+  -webkit-transition: color 0.15s ease;
+  -moz-transition: color 0.15s ease;
+  transition: color 0.15s ease;
+}
+.profile_card .header:hover .inner_head {
+  background: rgba(0, 0, 0, 0.5);
+}
+.profile_card .perfil {
+  background: #fff;
+  font-family: 'Flamenco', cursive;
+  box-shadow: 0 -0.2em 0 0 rgba(255, 255, 255, 0.5);
+}
+.profile_card .perfil .foto_perfil {
+  width: 92px;
+  height: 92px;
+  background: url(http://4.bp.blogspot.com/-OMr8Sy2iEwk/T2DXLgbjXpI/AAAAAAAADKk/RtqLjc2i3J8/s1600/el_padrino_marlon_brando.jpg) no-repeat top right;
+  background-size: 98%;
+  border-radius: 98%;
+  margin: -2.5em auto;
+  box-shadow: 0 0 0 0.2em rgba(255, 255, 255, 0.85), 0 0 0 0.3em rgba(0, 0, 0, 0.25);
+  position: relative;
+  z-index: 3;
+}
+.profile_card .perfil .inner_content {
+  width: 92%;
+  height: 194px;
+  float: left;
+  margin: 0.5em 4%;
+  background: #f9f9f9;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 1px;
+}
+.profile_card .perfil .inner_content:after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 16px;
+  background: #f9f9f9;
+  margin-top: -.8em;
+  margin-left: -1px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 -0.15em 0 0 #f4f4f4, inset 0 -0.2em 0 0 rgba(0, 0, 0, 0.1), inset 0 -0.35em 0 0 #f4f4f4, inset 0 -0.4em 0 0 rgba(0, 0, 0, 0.1);
+}
+.profile_card .perfil .inner_content .nomb {
+  color: #959595;
+  font-size: .9em;
+  text-align: center;
+  padding: .3em 0 .2em;
+  line-height: 2;
+  border-top: 0.1em solid rgba(0, 0, 0, 0.2);
+  border-bottom: 0.1em solid rgba(0, 0, 0, 0.2);
+  font-family: 'Flamenco', cursive;
+  font-weight: 400;
+  margin: 2.8em auto;
+  width: 75%;
+  margin-bottom: 1em;
+}
+.profile_card .perfil .inner_content .descripcion {
+  font-size: .75em;
+  text-align: center;
+  line-height: .5;
+  font-weight: 100;
+  padding: .2em .5em -.1em;
+  color: #ababab;
+  text-shadow: -1px -1px 0px rgba(255, 255, 255, 0.8);
+}
+.profile_card .perfil .inner_content ul {
+  list-style: none;
+  padding: 0;
+  width: 80%;
+  height: 3.5em;
+  display: block;
+  margin: 1em auto;
+}
+.profile_card .perfil .inner_content ul li {
+  display: block;
+  float: left;
+  padding: 0;
+  margin: .75em 0 0 1.25em;
+  text-align: center;
+}
+.profile_card .perfil .inner_content ul li:hover a {
+  color: #779EA1;
+}
+.profile_card .perfil .inner_content ul li a {
+  color: #A4E6EB;
+  text-decoration: none;
+  text-align: center;
+}
+.profile_card .perfil .inner_content ul li a span {
+  line-height: 1;
+}
 
+/* Buttons */
+.button {
+  padding: 10px 11px;
+  font-size: 1.1em;
+  width: 30px;
+  height: 28px;
+  line-height: 1;
+  position: relative;
+  background: -webkit-linear-gradient(top, #fefefe, #f2f2f2);
+  background: linear-gradient(to bottom, #fefefe, #f2f2f2);
+  box-shadow: 0 0 0.2em rgba(0, 0, 0, 0.1), inset 0 0.2em 0.2em rgba(255, 255, 255, 0.2), 0 0.1em 0.1em rgba(0, 0, 0, 0.1), 0 0.2em 0.1em rgba(0, 0, 0, 0.05);
+  border-radius: 100%;
+}
+.button:active {
+  top: .05em;
+  box-shadow: 0 0 0.2em rgba(0, 0, 0, 0.1), inset 0 0.2em 0.2em rgba(255, 255, 255, 0.2), 0 0.1em 0em rgba(0, 0, 0, 0.1), 0 0.1em 0.1em rgba(0, 0, 0, 0.05);
+}
+.button:hover {
+  box-shadow: 0 0 0.2em rgba(0, 0, 0, 0.15), inset 0 0.2em 0.2em rgba(255, 255, 255, 0.2), 0 0.1em 0.1em rgba(0, 0, 0, 0.15), 0 0.2em 0.1em rgba(0, 0, 0, 0.05);
+}
+
+/* Second */
+
+.profile_card {
+  height: 460px;
+  width: 260px;
+  float:left;
+  margin: 10vh auto;
+  border-radius: 1px;
+  box-shadow: 0 0 0 0.22em rgba(255, 255, 255, 0.35);
+}
+.profile_card .header, .profile_card .perfil {
+  height: 235px;
+  width: 100%;
+  float: left;
+}
+.profile_card .header {
+  background: url(http://www.boschce.es/wp-content/uploads/2013/05/nueva-york1.jpg) no-repeat center center;
+  background-size: 126% 100%;
+  -webkit-transition: background-size 0.3s ease;
+  -moz-transition: background-size 0.3s ease;
+  transition: background-size 0.3s ease;
+}
+.profile_card .header:before {
+  content: '';
+  display: block;
+  width: 100px;
+  height: 28px;
+  background: #f9f9f9;
+  position: relative;
+  z-index: 1;
+  margin: 15em auto 0;
+}
+.profile_card .header .inner_head a {
+  font-size: 1.4em;
+  padding: 1.5em 0.5em 0 1em;
+  display: inline-block;
+  color: transparent;
+  text-decoration: none;
+  width: 23%;
+  text-align: center;
+}
+.profile_card .header .inner_head a i {
+  position: absolute;
+  margin-top: 2em;
+  text-align: center;
+  display: block;
+  display: none;
+  font-style: normal;
+  left: 0;
+  right: 0;
+  margin: 2.8em auto;
+  font-family: 'Flamenco', cursive;
+  color: #fff;
+}
+
+.profile_card .header .inner_head {
+  position: relative;
+  margin-top: -16.8em;
+  width: 260px;
+  height: 230px;
+  -webkit-transition: background 0.3s ease;
+  -moz-transition: background 0.3s ease;
+  transition: background 0.3s ease;
+}
+
+.profile_card .header .inner_head a span {
+  margin-left: -.5em;
+  margin-top: -1em;
+  display: block;
+}
+.profile_card .header .inner_head a:hover i {
+  display: block;
+}
+.profile_card .header:hover {
+  -webkit-transition: background 0.3s ease;
+  -moz-transition: background 0.3s ease;
+  transition: background 0.3s ease;
+  background-size: 252% 200%;
+}
+.profile_card .header:hover a {
+  color: #fff;
+}
+.profile_card .header:hover a:nth-child(1) {
+  -webkit-transition: color 0.15s ease;
+  -moz-transition: color 0.15s ease;
+  transition: color 0.15s ease;
+}
+.profile_card .header:hover a:nth-child(1):hover {
+  color: #00FF6B;
+  -webkit-transition: color 0.15s ease;
+  -moz-transition: color 0.15s ease;
+  transition: color 0.15s ease;
+}
+.profile_card .header:hover a:nth-child(2) {
+  -webkit-transition: color 0.15s ease 0.15s;
+  -moz-transition: color 0.15s ease 0.15s;
+  transition: color 0.15s ease 0.15s;
+}
+.profile_card .header:hover a:nth-child(2):hover {
+  color: #B5F1FF;
+  -webkit-transition: color 0.15s ease;
+  -moz-transition: color 0.15s ease;
+  transition: color 0.15s ease;
+}
+.profile_card .header:hover a:nth-child(3) {
+  -webkit-transition: color 0.15s ease 0.2s;
+  -moz-transition: color 0.15s ease 0.2s;
+  transition: color 0.15s ease 0.2s;
+}
+.profile_card .header:hover a:nth-child(3):hover {
+  color: #FFCD00;
+  -webkit-transition: color 0.15s ease;
+  -moz-transition: color 0.15s ease;
+  transition: color 0.15s ease;
+}
+.profile_card .header:hover a:nth-child(4) {
+  -webkit-transition: color 0.15s ease 0.3s;
+  -moz-transition: color 0.15s ease 0.3s;
+  transition: color 0.15s ease 0.3s;
+}
+.profile_card .header:hover a:nth-child(4):hover {
+  color: #FF0022;
+  -webkit-transition: color 0.15s ease;
+  -moz-transition: color 0.15s ease;
+  transition: color 0.15s ease;
+}
+.profile_card .header:hover .inner_head {
+  background: rgba(0, 0, 0, 0.5);
+}
+.profile_card .perfil {
+  background: #fff;
+  font-family: 'Flamenco', cursive;
+  box-shadow: 0 -0.2em 0 0 rgba(255, 255, 255, 0.5);
+}
+.profile_card .perfil .foto_perfil {
+  width: 92px;
+  height: 92px;
+  background: url(http://4.bp.blogspot.com/-OMr8Sy2iEwk/T2DXLgbjXpI/AAAAAAAADKk/RtqLjc2i3J8/s1600/el_padrino_marlon_brando.jpg) no-repeat top right;
+  background-size: 98%;
+  border-radius: 98%;
+  margin: -2.5em auto;
+  box-shadow: 0 0 0 0.2em rgba(255, 255, 255, 0.85), 0 0 0 0.3em rgba(0, 0, 0, 0.25);
+  position: relative;
+  z-index: 3;
+}
+.profile_card .perfil .foto_perfil:hover {
+  width: 92px;
+  height: 92px;
+  background: url(http://4.bp.blogspot.com/-OMr8Sy2iEwk/T2DXLgbjXpI/AAAAAAAADKk/RtqLjc2i3J8/s1600/el_padrino_marlon_brando.jpg) no-repeat top right;
+  background-size: 98%;
+  border-radius: 98%;
+  margin: -2.5em auto;
+  box-shadow: 0 0 0 0.2em rgba(255, 255, 255, 0.85), 0 0 0 0.3em rgba(0, 0, 0, 0.25);
+  position: relative;
+  z-index: 3;
+   transform:scale(1.15);
+}
+.profile_card .perfil .inner_content {
+  width: 92%;
+  height: 194px;
+  float: left;
+  margin: 0.5em 4%;
+  background: #f9f9f9;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 1px;
+}
+.profile_card .perfil .inner_content:after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 16px;
+  background: #f9f9f9;
+  margin-top: -.8em;
+  margin-left: -1px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 -0.15em 0 0 #f4f4f4, inset 0 -0.2em 0 0 rgba(0, 0, 0, 0.1), inset 0 -0.35em 0 0 #f4f4f4, inset 0 -0.4em 0 0 rgba(0, 0, 0, 0.1);
+}
+.profile_card .perfil .inner_content .nomb {
+  color: #959595;
+  font-size: .9em;
+  text-align: center;
+  padding: .3em 0 .2em;
+  line-height: 2;
+  border-top: 0.1em solid rgba(0, 0, 0, 0.2);
+  border-bottom: 0.1em solid rgba(0, 0, 0, 0.2);
+  font-family: 'Flamenco', cursive;
+  font-weight: 400;
+  margin: 2.8em auto;
+  width: 75%;
+  margin-bottom: 1em;
+}
+.profile_card .perfil .inner_content .descripcion {
+  font-size: .75em;
+  text-align: center;
+  line-height: .5;
+  font-weight: 100;
+  padding: .2em .5em -.1em;
+  color: #ababab;
+  text-shadow: -1px -1px 0px rgba(255, 255, 255, 0.8);
+}
+.profile_card .perfil .inner_content ul {
+  list-style: none;
+  padding: 0;
+  width: 80%;
+  height: 3.5em;
+  display: block;
+  margin: 1em auto;
+}
+.profile_card .perfil .inner_content ul li {
+  display: block;
+  float: left;
+  padding: 0;
+  margin: .75em 0 0 1.25em;
+  text-align: center;
+}
+.profile_card .perfil .inner_content ul li:hover a {
+  color: #779EA1;
+}
+.profile_card .perfil .inner_content ul li a {
+  color: #A4E6EB;
+  text-decoration: none;
+  text-align: center;
+}
+.profile_card .perfil .inner_content ul li a span {
+  line-height: 1;
+}
+
+/* Buttons */
+.button {
+  padding: 10px 11px;
+  font-size: 1.1em;
+  width: 30px;
+  height: 28px;
+  line-height: 1;
+  position: relative;
+  background: -webkit-linear-gradient(top, #fefefe, #f2f2f2);
+  background: linear-gradient(to bottom, #fefefe, #f2f2f2);
+  box-shadow: 0 0 0.2em rgba(0, 0, 0, 0.1), inset 0 0.2em 0.2em rgba(255, 255, 255, 0.2), 0 0.1em 0.1em rgba(0, 0, 0, 0.1), 0 0.2em 0.1em rgba(0, 0, 0, 0.05);
+  border-radius: 100%;
+}
+.button:active {
+  top: .05em;
+  box-shadow: 0 0 0.2em rgba(0, 0, 0, 0.1), inset 0 0.2em 0.2em rgba(255, 255, 255, 0.2), 0 0.1em 0em rgba(0, 0, 0, 0.1), 0 0.1em 0.1em rgba(0, 0, 0, 0.05);
+}
+.button:hover {
+  box-shadow: 0 0 0.2em rgba(0, 0, 0, 0.15), inset 0 0.2em 0.2em rgba(255, 255, 255, 0.2), 0 0.1em 0.1em rgba(0, 0, 0, 0.15), 0 0.2em 0.1em rgba(0, 0, 0, 0.05);
+}
+
+/* Search */ 
 #search {
 
 }
@@ -167,4 +545,11 @@ text-shadow: 2px 2px #000;
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(0, 0, 0, 0.9) inset;
     text-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
     }
+.text {
 
+font-size: 10px;
+color: #CECECE;
+font-family: 'Varela Round', sans-serif;
+margin-left: 100px;
+margin-top: 20px;
+}
