--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -517,7 +517,7 @@ body {
 
 
 #search input[type="text"] {
-    background: url(../images/search-white.png) no-repeat 10px 6px #444;
+    background: url({{STATIC_URL}}img/search-white.png) no-repeat 10px 6px #444;
     border: 0 none;
     font: bold 12px Arial,Helvetica,Sans-serif;
     color: #d7d7d7;
@@ -537,7 +537,7 @@ body {
     }
 
 #search input[type="text"]:focus {
-    background: url(../images/search-dark.png) no-repeat 10px 6px #fcfcfc;
+    background: url({{STATIC_URL}}img/search-dark.png) no-repeat 10px 6px #fcfcfc;
     color: #6a6f75;
     width: 200px;
     -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(0, 0, 0, 0.9) inset;
