--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -4,7 +4,7 @@
   font-family: 'entypo', sans-serif;
 }
 
-@import url(http://fonts.googleapis.com/css?family=Flamenco);
+@import url(http://fonts.googleapis.com/css?family=Droid+Sans+Mono);
 
 * {
   -webkit-font-smoothing: antialiased;
@@ -199,7 +199,7 @@ body {
   line-height: 2;
   border-top: 0.1em solid rgba(0, 0, 0, 0.2);
   border-bottom: 0.1em solid rgba(0, 0, 0, 0.2);
-  font-family: 'Flamenco', cursive;
+font-family: 'Droid Sans Mono',;
   font-weight: 400;
   margin: 2.8em auto;
   width: 75%;
@@ -313,7 +313,7 @@ body {
   left: 0;
   right: 0;
   margin: 2.8em auto;
-  font-family: 'Flamenco', cursive;
+  font-family: 'Droid Sans Mono', ;
   color: #fff;
 }
 
@@ -447,7 +447,7 @@ body {
   line-height: 2;
   border-top: 0.1em solid rgba(0, 0, 0, 0.2);
   border-bottom: 0.1em solid rgba(0, 0, 0, 0.2);
-  font-family: 'Flamenco', cursive;
+  font-family: 'Droid Sans Mono', ;
   font-weight: 400;
   margin: 2.8em auto;
   width: 75%;
@@ -517,7 +517,7 @@ body {
 
 
 #search input[type="text"] {
-    background: url({{STATIC_URL}}img/search-white.png) no-repeat 10px 6px #444;
+    background: url{{STATIC_URL}}img/search-white.png no-repeat 10px 6px #444;
     border: 0 none;
     font: bold 12px Arial,Helvetica,Sans-serif;
     color: #d7d7d7;
@@ -537,7 +537,7 @@ body {
     }
 
 #search input[type="text"]:focus {
-    background: url({{STATIC_URL}}img/search-dark.png) no-repeat 10px 6px #fcfcfc;
+    background: url{{STATIC_URL}}img/search-dark.png no-repeat 10px 6px #fcfcfc;
     color: #6a6f75;
     width: 200px;
     -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(0, 0, 0, 0.9) inset;
