--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -77,7 +77,7 @@ body {
   left: 0;
   right: 0;
   margin: 2.8em auto;
-  font-family: 'Flamenco', cursive;
+  font-family: 'Droid Sans Mono', ;
   color: #fff;
 }
 
@@ -157,7 +157,7 @@ body {
 }
 .profile_card .perfil {
   background: #fff;
-  font-family: 'Flamenco', cursive;
+  font-family: 'Droid Sans Mono', ;
   box-shadow: 0 -0.2em 0 0 rgba(255, 255, 255, 0.5);
 }
 .profile_card .perfil .foto_perfil {
@@ -393,7 +393,7 @@ font-family: 'Droid Sans Mono',;
 }
 .profile_card .perfil {
   background: #fff;
-  font-family: 'Flamenco', cursive;
+  font-family: 'Droid Sans Mono', ;
   box-shadow: 0 -0.2em 0 0 rgba(255, 255, 255, 0.5);
 }
 .profile_card .perfil .foto_perfil {
@@ -549,7 +549,7 @@ font-family: 'Droid Sans Mono',;
 
 font-size: 10px;
 color: #CECECE;
-font-family: 'Varela Round', sans-serif;
+font-family: 'Droid Sans Mono', ;
 margin-left: 100px;
 margin-top: 20px;
 }
