--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -77,7 +77,7 @@ body {
   left: 0;
   right: 0;
   margin: 2.8em auto;
-  font-family: 'Droid Sans Mono', ;
+  font-family: 'Metrophobic', sans-serif;
   color: #fff;
 }
 
@@ -157,7 +157,7 @@ body {
 }
 .profile_card .perfil {
   background: #fff;
-  font-family: 'Droid Sans Mono', ;
+  font-family: 'Metrophobic', sans-serif;
   box-shadow: 0 -0.2em 0 0 rgba(255, 255, 255, 0.5);
 }
 .profile_card .perfil .foto_perfil {
@@ -199,7 +199,7 @@ body {
   line-height: 2;
   border-top: 0.1em solid rgba(0, 0, 0, 0.2);
   border-bottom: 0.1em solid rgba(0, 0, 0, 0.2);
-font-family: 'Droid Sans Mono',;
+  font-family: 'Metrophobic', sans-serif;
   font-weight: 400;
   margin: 2.8em auto;
   width: 75%;
@@ -313,7 +313,7 @@ font-family: 'Droid Sans Mono',;
   left: 0;
   right: 0;
   margin: 2.8em auto;
-  font-family: 'Droid Sans Mono', ;
+  font-family: 'Metrophobic', sans-serif;
   color: #fff;
 }
 
@@ -393,7 +393,7 @@ font-family: 'Droid Sans Mono',;
 }
 .profile_card .perfil {
   background: #fff;
-  font-family: 'Droid Sans Mono', ;
+  font-family: 'Metrophobic', sans-serif;
   box-shadow: 0 -0.2em 0 0 rgba(255, 255, 255, 0.5);
 }
 .profile_card .perfil .foto_perfil {
@@ -447,7 +447,7 @@ font-family: 'Droid Sans Mono',;
   line-height: 2;
   border-top: 0.1em solid rgba(0, 0, 0, 0.2);
   border-bottom: 0.1em solid rgba(0, 0, 0, 0.2);
-  font-family: 'Droid Sans Mono', ;
+  font-family: 'Metrophobic', sans-serif;
   font-weight: 400;
   margin: 2.8em auto;
   width: 75%;
@@ -537,7 +537,7 @@ font-family: 'Droid Sans Mono',;
     }
 
 #search input[type="text"]:focus {
-    background: url{{STATIC_URL}}img/search-dark.png, no-repeat 10px 6px #fcfcfc;
+    background: url(img/search-dark.png) no-repeat 10px 6px #fcfcfc;
     color: #6a6f75;
     width: 200px;
     -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(0, 0, 0, 0.9) inset;
@@ -549,7 +549,7 @@ font-family: 'Droid Sans Mono',;
 
 font-size: 10px;
 color: #CECECE;
-font-family: 'Droid Sans Mono', ;
+font-family: 'Metrophobic', sans-serif;
 margin-left: 100px;
 margin-top: 20px;
 }
