--- a/skyfolk/static/css/widget1.css
+++ b/skyfolk/static/css/widget1.css
@@ -70,7 +70,7 @@ border-radius: 100px;
 	text-shadow: 1px 3px 6px #0e76a8,
 								0px 0px 0px #000,
 							1px 4px 6px #0e76a8;
-	background:#907AFB;
+	background:#0040FF;
 	-webkit-border-radius:305px 0px 0px 0px;
 	border-radius:305px 0px 0px 0px;
 }
