--- a/skyfolk/static/css/widget1.css
+++ b/skyfolk/static/css/widget1.css
@@ -91,7 +91,7 @@ border-radius: 100px;
 	text-shadow: 1px 3px 6px #3B5998,
 								0px 0px 0px #000,
 							1px 4px 6px #3B5998;
-	background:#F77AFB;
+	background:#B3E9E5;
 	-webkit-border-radius:0px  0px 0px 205px;
 	border-radius:0px  0px 0px 205px;
 }
