--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -4,7 +4,7 @@
   font-family: 'entypo', sans-serif;
 }
 
-@import url(http://fonts.googleapis.com/css?family=Flamenco);
+@import url(http://fonts.googleapis.com/css?family=Exo);
 
 * {
   -webkit-font-smoothing: antialiased;
@@ -77,7 +77,7 @@ body {
   left: 0;
   right: 0;
   margin: 2.8em auto;
-  font-family: 'Flamenco', cursive;
+  font-family: 'Exo', sans-serif;
   color: #fff;
 }
 
@@ -157,7 +157,7 @@ body {
 }
 .profile_card .perfil {
   background: #fff;
-  font-family: 'Flamenco', cursive;
+  font-family: 'Exo', sans-serif;
   box-shadow: 0 -0.2em 0 0 rgba(255, 255, 255, 0.5);
 }
 .profile_card .perfil .foto_perfil {
@@ -199,7 +199,7 @@ body {
   line-height: 2;
   border-top: 0.1em solid rgba(0, 0, 0, 0.2);
   border-bottom: 0.1em solid rgba(0, 0, 0, 0.2);
-  font-family: 'Flamenco', cursive;
+  font-family: 'Exo', sans-serif;
   font-weight: 400;
   margin: 2.8em auto;
   width: 75%;
@@ -313,7 +313,7 @@ body {
   left: 0;
   right: 0;
   margin: 2.8em auto;
-  font-family: 'Flamenco', cursive;
+  font-family: 'Exo', sans-serif;
   color: #fff;
 }
 
@@ -393,7 +393,7 @@ body {
 }
 .profile_card .perfil {
   background: #fff;
-  font-family: 'Flamenco', cursive;
+  font-family: 'Exo', sans-serif;
   box-shadow: 0 -0.2em 0 0 rgba(255, 255, 255, 0.5);
 }
 .profile_card .perfil .foto_perfil {
@@ -447,7 +447,7 @@ body {
   line-height: 2;
   border-top: 0.1em solid rgba(0, 0, 0, 0.2);
   border-bottom: 0.1em solid rgba(0, 0, 0, 0.2);
-  font-family: 'Flamenco', cursive;
+  font-family: 'Exo', sans-serif;
   font-weight: 400;
   margin: 2.8em auto;
   width: 75%;
