--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1070,3 +1070,16 @@ margin-top: -34px;
  transform: scale (3,3)
   }
   /*Fin informacion perfil */
+  
+  /* Presencia user */
+ .foto_perfil {
+  width: 32px;
+  height: 32px;
+  background: url(http://4.bp.blogspot.com/-OMr8Sy2iEwk/T2DXLgbjXpI/AAAAAAAADKk/RtqLjc2i3J8/s1600/el_padrino_marlon_brando.jpg) no-repeat top right;
+  background-size: 98%;
+  border-radius: 98%;
+  margin: -2.5em auto;
+  box-shadow: 0 0 0 0.2em rgba(255, 255, 255, 0.85), 0 0 0 0.3em rgba(0, 0, 0, 0.25);
+  position: relative;
+  z-index: 3;
+}
