--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1073,8 +1073,8 @@ margin-top: -34px;
   
   /* Presencia user */
  .foto_perfil {
-  width: 52px;
-  height: 52px;
+  width: 45px;
+  height: 45px;
   background: url(http://4.bp.blogspot.com/-OMr8Sy2iEwk/T2DXLgbjXpI/AAAAAAAADKk/RtqLjc2i3J8/s1600/el_padrino_marlon_brando.jpg) no-repeat top right;
   background-size: 98%;
   border-radius: 98%;
@@ -1082,8 +1082,8 @@ margin-top: -34px;
   box-shadow: 0 0 0 0.2em rgba(255, 255, 255, 0.85), 0 0 0 0.3em rgba(0, 0, 0, 0.25);
   position: relative;
   z-index: 3;
-  float: right;
+  right: 50px;
 }
 .nameact {
-float: right;
+right: 20px;
 }
