--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1082,6 +1082,7 @@ margin-top: -34px;
   box-shadow: 0 0 0 0.2em rgba(255, 255, 255, 0.85), 0 0 0 0.3em rgba(0, 0, 0, 0.25);
   position: relative;
   z-index: 3;
+  float: right;
   right: 10px;
 }
 .nameact {
