--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1078,12 +1078,12 @@ margin-top: -34px;
   background: url(http://4.bp.blogspot.com/-OMr8Sy2iEwk/T2DXLgbjXpI/AAAAAAAADKk/RtqLjc2i3J8/s1600/el_padrino_marlon_brando.jpg) no-repeat top right;
   background-size: 98%;
   border-radius: 98%;
-  margin: -1em auto;
+  margin: auto;
   box-shadow: 0 0 0 0.2em rgba(255, 255, 255, 0.85), 0 0 0 0.3em rgba(0, 0, 0, 0.25);
   position: relative;
   z-index: 3;
   float: right;
-  right: 80px;
+  right: 100px;
 }
 .nameact {
 float: right; 
