--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1101,14 +1101,14 @@ margin-top: -34px;
     display: block;
     width: 100%;
     height: 44px;
-    background: #E7533C;
+    background: #fafafa;
     color: #fafafa;
     text-decoration: none;
     text-align: left;
     line-height: 2;
     padding-left: 10px;
     font-size: 1.4em;
-    border-bottom: 3px solid #cc4531;
+    border-bottom: 2px solid #cc4531;
 }
 .nameact a span {
     float: right;
