--- a/skyfolk/static/css/noti.css
+++ b/skyfolk/static/css/noti.css
@@ -1,102 +1,125 @@
-/* the norm */
-#gritter-notice-wrapper {
-	position:fixed;
-	top:20px;
-	right:20px;
-	width:301px;
-	z-index:9999;
+@import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:700,400,300);
+
+$c-black: #111;
+$c-white: #fff;
+$c-blues: #2980B9, #0074D9, #009FE3;
+$c-greys: #343C3F, #A2ACB0, #D9E1E4;
+$c-greens: #27AE60, #2ECC40, #01FF70;
+$c-reds: #C0392B, #FF4136, #E74C3C;
+$c-yellows: #F39C12, #FCA624, #F1C40F;
+$c-purples: #532E62, #8E44AD, #9B59B6;
+
+* {
+  box-sizing: border-box;
 }
-#gritter-notice-wrapper.top-left {
-    left: 20px;
-    right: auto;
+
+body {
+  background-color: #ddd;
+  font-family: 'Source Sans Pro';
+  font-weight: 300;
 }
-#gritter-notice-wrapper.bottom-right {
-    top: auto;
-    left: auto;
-    bottom: 20px;
-    right: 20px;
+
+.Message {
+  display: table;
+  position: relative;
+  margin: 40px auto 0;
+  width: 500px;
+  background-color: nth($c-blues, 2);
+  color: #fff;
+  transition: all 0.2s ease;
+  
+  &.is-hidden {
+    opacity: 0;
+    height: 0;
+    font-size: 0;
+    padding: 0;
+    margin: 0 auto;
+    display: block;
+  }
 }
-#gritter-notice-wrapper.bottom-left {
-    top: auto;
-    right: auto;
-    bottom: 20px;
-    left: 20px;
-}
-.gritter-item-wrapper {
-	position:relative;
-	margin:0 0 10px 0;
-	background:url('../img/ie-spacer.gif'); /* ie7/8 fix */ 
-}
-.gritter-top {
-	background:url(../img/gritter.png) no-repeat left -30px;
-	height:10px;
-}
-.hover .gritter-top {
-	background-position:right -30px;
-}
-.gritter-bottom {
-	background:url(../img/gritter.png) no-repeat left bottom;
-	height:8px;
-	margin:0;
-}
-.hover .gritter-bottom {
-	background-position: bottom right;
-}
-.gritter-item {
-	display:block;
-	background:url(../img/gritter.png) no-repeat left -40px;
-	color:#eee;
-	padding:2px 11px 8px 11px;
-	font-size: 11px;
-	font-family:verdana;
-}
-.hover .gritter-item {
-	background-position:right -40px;
-}
-.gritter-item p {
-	padding:0;
-	margin:0;
-	word-wrap:break-word;
-}
-.gritter-close {
-	display:none;
-	position:absolute;
-	top:5px;
-	left:3px;
-	background:url(../img/gritter.png) no-repeat left top;
-	cursor:pointer;
-	width:30px;
-	height:30px;
-	text-indent:-9999em;
-}
-.gritter-title {
-	font-size:14px;
-	font-weight:bold;
-	padding:0 0 7px 0;
-	display:block;
-	text-shadow:1px 1px 0 #000; /* Not supported by IE :( */
-}
-.gritter-image {
-	width:48px;
-	height:48px;
-	float:left;
-}
-.gritter-with-image,
-.gritter-without-image {
-	padding:0;
-}
-.gritter-with-image {
-	width:220px;
-	float:right;
-}
-/* for the light (white) version of the gritter notice */
-.gritter-light .gritter-item,
-.gritter-light .gritter-bottom,
-.gritter-light .gritter-top,
-.gritter-light .gritter-close {
-    background-image: url(../img/gritter-light.png);
-    color: #222;
-}
-.gritter-light .gritter-title {
-    text-shadow: none;
+  .Message--orange {
+    background-color: nth($c-yellows, 1);
+  }
+
+  .Message--red {
+    background-color: nth($c-reds, 2);
+  }
+
+  .Message--green {
+    background-color: nth($c-greens, 2);
+  }
+
+  .Message-icon {
+    display: table-cell;
+    vertical-align: middle;
+    width: 60px;
+    padding: 30px;
+    text-align: center;
+    background-color: rgba(black, 0.25);
+    
+    >i {
+      width: 20px;
+      font-size: 20px;
+    }
+  }
+  
+  .Message-body {
+    display: table-cell;
+    vertical-align: middle;
+    padding: 30px 20px 30px 10px;
+    
+    > p {
+      line-height: 1.2;
+      margin-top: 6px;
+    }
+  }
+
+  .Message-button {
+    position: relative;
+    margin: 15px 5px -10px;
+    background-color: rgba(black, 0.25);
+    box-shadow: 0 3px rgba(black, 0.4);
+    border:none;
+    padding: 10px 15px;
+    font-size: 16px;
+    font-family: 'Source Sans Pro';
+    color: #fff;
+    outline: none;
+    cursor: pointer;
+    
+    &:hover {
+      background: rgba(black, 0.3);
+    }
+ 
+    &:active {
+      background: rgba(black, 0.3);
+      box-shadow: 0 0px rgba(black, 0.4);
+      top: 3px;
+    }
+  }
+
+  .Message-close {
+    position: absolute;
+    background-color: rgba(black, 0.3);
+    color: #fff;
+    border: none;
+    outline: none;
+    font-size: 20px;
+    right: 5px;
+    top: 5px;
+    opacity: 0;
+    cursor: pointer;
+    
+    .Message:hover & {
+      opacity: 1;
+    }
+    
+    &:hover {
+      background-color: rgba(black, 0.5);
+    }
+  }
+
+.u-italic {
+  font-style: italic;
 }
