--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1005,7 +1005,8 @@ width: 100%;
 position: auto;
 display: block;
 box-shadow: 3px 2px 4px 3px;
-background: rgba(0, 0, 0, 0.7);
+background:#C13FE9;
+opacity: 0.7;
 top: 5px;
 }
 
@@ -1140,11 +1141,6 @@ $c-purples: #532E62, #8E44AD, #9B59B6;
   box-sizing: border-box;
 }
 
-body {
-  background-color: #ddd;
-  font-family: 'Source Sans Pro';
-  font-weight: 300;
-}
 
 .Mensaje {
   display: table;
