--- a/skyfolk/static/css/configuracion.css
+++ b/skyfolk/static/css/configuracion.css
@@ -33,8 +33,8 @@ font-family: 'Gafata', sans-serif;
 }
 /*Cuerpo*/
 #pass {
-right: 520px;
-top: 200px;
+right: 535px;
+top: 280px;
 position:absolute;
 }
 
@@ -116,17 +116,21 @@ text-decoration:none !important;
 bottom: -2px;
 }
 #contra {
-width: 310px;
-height: 50px;
-margin-left: 385px;
-margin-top: -380px;
+/*top: -10px;*/
+width: 470px;
+height: 150px;
+/*margin-left: 385px;*/
+/*margin-top: -380px;*/
 font-family: 'Gafata', sans-serif;
-right: 100px;
-padding-right: 50px;
+/*right: 100px;*/
+/*padding-right: 50px;*/
 background: #FFFFFF;
 border: 50px solid #FFF;
 border-radius: 8px 8px 8px 8px;
 box-shadow: rgb(196,196,196) 5px 5px;
+position: absolute;
+top:90px;
+left:370px;
 }
 #cn {
 font-size: 20px;
