--- a/skyfolk/templates/account/login.html
+++ b/skyfolk/templates/account/login.html
@@ -1,4 +1,4 @@
-{% extends "account/base_login.html" %}
+{% extends "account/base_login-signup.html" %}
 
 {% load i18n %}
 {% load account %}
@@ -7,8 +7,8 @@
 <!--{% block head_title %}{% trans "Sign In" %}{% endblock %}-->
 
 {% block extra_head %}
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/login.css" />
-<!--<link rel="stylesheet" type="text/css" href=".../static/css/login.css" />-->
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/login-signup.css" />
+<!--<link rel="stylesheet" type="text/css" href=".../static/css/login-signup.css" />-->
 
 {% endblock %}
 
@@ -47,7 +47,8 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
 	  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
 	  {% endif %}
 	  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-	  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+	  <button class="primaryAction myButton" type="submit">{% trans "Sign In" %}</button>
+	  <a id="link-login" href="{{ signup_url }}">{% trans "Sign Up" %}</a>
 	</form>
 </div>
 {% endblock %}
