restablecer icono de configuracion

--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -484,3 +484,16 @@ text-shadow: 1px 1px 1px rgba(255,255,255,0.5);
 .fontawesome-th:hover {
 color:#FFB912
 }
+.fontawesome-cog{
+color:#A4A4A4;
+cursor:pointer;
+text-align: center;
+/*margin: 1115px;
+top:-1099px;
+position: absolute;*/
+font-size: 38px;
+padding: 0px;
+/*float: right;*/
+margin-left:15px;
+text-shadow: 1px 1px 1px rgba(255,255,255,0.5); 
+}
