--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -158,12 +158,12 @@
 	<nav>
 	<ul class="form">
 		<li><a class="profile" href="#"><i class="icon-user"></i>Cuenta.</a></li>
-		<li class="selected"><a id ="menucf-changepass" class="messages" href="/config/cf-changepass"><i class="entypo-key"></i>Contraseña. </a></li>
+		<li class="selected"><a id ="menucf-changepass" class="messages" href="/config/changepass"><i class="entypo-key"></i>Contraseña. </a></li>
 		<li><a class="settings" href="#"><i class="entypo-lock"></i>Seguridad y privacidad.</a></li>
 		<li><a class="logout" href="cf.html"target="cf"><i class="entypo-mobile"></i>Movil y correo electronico.</a></li>
 				<li><a class="logout" href="#"><i class="entypo-sweden"></i>Widgets.</a><em>5</em></li>
 						<li><a class="logout" href="#"><i class="entypo-palette"></i>Diseño..</a></li>
-								<li><a id ="menucf-profile" class="logout" href="/config/cf-profile"><i class="entypo-vcard"></i>Perfil.</a></li>
+								<li><a id ="menucf-profile" class="logout" href="/config/profile"><i class="entypo-vcard"></i>Perfil.</a></li>
 	</ul>
 </nav>
 <section id="contra">
