preparando que el usuario pueda cambiar de imagen

--- a/skyfolk/templates/account/cf-changepass.html
+++ b/skyfolk/templates/account/cf-changepass.html
@@ -16,9 +16,9 @@
 
 
 {% block cf-form %}
-	Contraseña actual <input class="actual" type="password" name="Contraseña actual." value="actual"><br>
-	Nueva contraseña <input class="actual" type="password" name="Nueva contraseña." value=""><br>
-	Verificar contraseña <input class="actual" type="password" name="Repita su nueva contraseña." value=""><br>
+	<label>Contraseña actual</label> <input class="actual" type="password" name="Contraseña actual." value="actual"><br>
+	<label>Nueva contraseña</label> <input class="actual" type="password" name="Nueva contraseña." value=""><br>
+	<label>Verificar contraseña</label> <input class="actual" type="password" name="Repita su nueva contraseña." value=""><br>
 	<input id="btn" type="submit" value="Guardar cambios">
 	<p id="lost"><a href="/"> ¿Olvidaste tu contraseña?</a> </p>
 {% endblock %}
