--- a/skyfolk/templates/account/cf-profile.html
+++ b/skyfolk/templates/account/cf-profile.html
@@ -20,7 +20,8 @@
 	<input id="btn" type="submit" value="Guardar cambios">
 	-->
 	<form id='formulario' method='post' enctype='multipart/form-data' action=''>{% csrf_token %}
-		{{form.as_p}}
+		{{ user_form }}
+    	{{ perfil_form }}
 		<input id="btn" type="submit" value="Guardar cambios">
 	</form>
 {% endblock %}
