--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -37,13 +37,14 @@
 
    
     <div id="panel1">
-      <li><a href="#">Profile <span class="entypo-user"></span></a></li> 
-    <li><a href="#">Media <span class="entypo-video"></span></a></li>
-    <li><a href="#">Games <span class="entypo-rocket"></span></a></li>
+      <dropdown>
+  <ul class="animate">
+    <li class="animate">Perfil <i class="entypo-user"></i></li>
+    <li class="animate">Multimedia<i class="entypo-video"></i></li>
+    <li class="animate">Juegos<i class="entypo-rocket"></i></li>
     <li><a href="#">Friends <span class="entypo-users"></span></a></li>
-
-    </div>
-    
+  </ul>
+</dropdown>
 </div>
 
 
