--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -37,14 +37,18 @@
 
    
     <div id="panel1">
-      <dropdown>
+     <dropdown>
+ 
   <ul class="animate">
     <li class="animate">Perfil <i class="entypo-user"></i></li>
     <li class="animate">Multimedia<i class="entypo-video"></i></li>
     <li class="animate">Juegos<i class="entypo-rocket"></i></li>
-    <li><a href="#">Friends <span class="entypo-users"></span></a></li>
+    
   </ul>
 </dropdown>
+
+    </div>
+    
 </div>
 
 
