--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -254,8 +254,12 @@
           <ul class="unstyled table fullwidth links">
             <input class="active" type="radio" name="tabs" checked> 
             <label for"tab1">Popular</label>
-            <li class="comentarios"><a>Comentarios</a></li>
-            <li class="active"><a>Recientes</a></li>
+            <input class="recientes" type="radio" name="tabs">
+  <label for="tab2">Recientes</label>
+    
+  <input class="comentarios" type="radio" name="tabs">
+  <label for="tab3">Comentarios</label>
+            
           </ul>
           <ul class="unstyled content">
             <div class="wrapper">
