--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -47,6 +47,50 @@
   </ul>
 </dropdown>
 
+/* more */
+<nav id="menu">
+    <ul>
+      <li><a href="#">Sans sous-menu</a></li>
+      <li><a href="#">Un niveau</a>
+        <ul>
+          <li><a href="#">Lien 1</a></li>
+          <li><a href="#">Lien 2</a></li>
+          <li><a href="#">Lien 3</a></li>
+          <li><a href="#">Lien 4</a></li>
+          <li><a href="#">Lien 5</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Deux niveaux</a>
+        <ul>
+          <li><a href="#">Lien 1</a>
+            <ul>
+              <li><a href="#">Sous-menu 1</a></li>
+              <li><a href="#">Sous-menu 2</a></li>
+              <li><a href="#">Sous-menu 3</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Lien 2</a>
+            <ul>
+              <li><a href="#">Sous-menu 1</a></li>
+              <li><a href="#">Sous-menu 2</a></li>
+              <li><a href="#">Sous-menu 3</a></li>
+              <li><a href="#">Sous-menu 4</a></li>
+              <li><a href="#">Sous-menu 5</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Lien 3</a>
+            <ul>
+              <li><a href="#">Sous-menu 1</a></li>
+              <li><a href="#">Sous-menu 2</a></li>
+              <li><a href="#">Sous-menu 3</a></li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li><a href="#">Sans sous-menu</a></li>
+      <li><a href="#">Sans sous-menu</a></li>
+    </ul>
+</nav>
     </div>
     
 </div>
