--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -50,8 +50,8 @@
 
 <nav id="menu">
     <ul>
-      <li><a href="#">Sans sous-menu</a></li>
-      <li><a href="#">Un niveau</a>
+      <li><a href="#">Más visitados.</a></li>
+      <li><a href="#">Favoritos.</a>
         <ul>
           <li><a href="#">Lien 1</a></li>
           <li><a href="#">Lien 2</a></li>
@@ -60,7 +60,7 @@
           <li><a href="#">Lien 5</a></li>
         </ul>
       </li>
-      <li><a href="#">Deux niveaux</a>
+      <li><a href="#">Famosos.</a>
         <ul>
           <li><a href="#">Lien 1</a>
             <ul>
@@ -87,8 +87,8 @@
           </li>
         </ul>
       </li>
-      <li><a href="#">Sans sous-menu</a></li>
-      <li><a href="#">Sans sous-menu</a></li>
+      <li><a href="#">Descubre.</a></li>
+      <li><a href="#">Los más gustados.</a></li>
     </ul>
 </nav>
     </div>
