--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -119,7 +119,7 @@ btn.value = "me gusta (" + i + ")";
 
   	</div></li></li></ul>
 
-  	{% if showPerfilButtons or user.username == userProfile.username %}
+  	{% if showPerfilButtons or user.username == user_profile.username %}
 
 
   		<div id ="box-tool">
