--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -92,7 +92,7 @@
             <p>{{ userProfile.username }}</p>
             -->
             <!--<h1>{{ userProfile.first_name }} {{ userProfile.last_name }}</h1>-->
-            <p>{{ userProfile.username }}</p>
+            <p>{{ user_profile.username }}</p>
 
           </header>
           <div class="status">Play hard.</div>
